feat: sync src